# psycho-killer

./: Cargo.toml  Makefile  README.md  rustfmt.toml
src/: action_menu.rs  app.rs  app_logic.rs  appdata.rs  event.rs  keyboard.rs  kill.rs  logs.rs  main.rs  numbers.rs  strings.rs  sysinfo.rs  sysinfo_render.rs  tui.rs  ui.rs  update.rs
