[package]
name = "psycho-killer"
version = "0.1.1"
license = "MIT"
edition = "2021"
description = "Interactive process killer, manager and system resources monitor"
repository = "https://github.com/igrek51/psycho-killer"
homepage = "https://github.com/igrek51/psycho-killer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
ratatui = "0.25.0"
sysinfo = "0.29.11"

[[bin]]
name = "psycho"
path = "src/main.rs"
