[package]
name = "psycho-killer"
version = "0.6.0"
license = "MIT"
edition = "2021"
description = "Interactive process killer, manager and system resources monitor"
repository = "https://github.com/igrek51/psycho-killer"
homepage = "https://github.com/igrek51/psycho-killer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
crossterm = "0.28.1"
itertools = "0.13.0"
lazy_static = "1.5.0"
libc = "0.2.153"
ratatui = "0.29.0"
signal-hook = "0.3.17"
sysinfo = "0.29.11"

[[bin]]
name = "psycho"
path = "src/main.rs"
